# do-plugins

./: DoPlugins.mds  Makefile.am  configure.ac
GNOME-Keyring/: GNOME-Keyring.mdp  Makefile.am
GNOME-Keyring/Resources/: GNOME-Keyring.addin.xml.in
GNOME-Keyring/src/: KeyringItemSource.cs
